src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Currency__c</fullName>
        <description>The currency code associated with this client.</description>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Harvest_Id__c</fullName>
        <description>Will be retrieved and saved here by Harvest API code in the future - no need to set. marking as external id so we can search on it</description>
        <externalId>true</externalId>
        <label>Harvest Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether the client is active or archived.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Client</fullName>
        <active>true</active>
        <description>Use this Record Type once the Account becomes a Client</description>
        <label>Client</label>
    </recordTypes>
</CustomObject>